HousePrice/api/kub/database1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: database1
  name: database1
spec:
  ports:
  - name: "5446"
    port: 5446
    targetPort: 5432
  selector:
    io.kompose.service: database1
status:
  loadBalancer: {}
