HousePrice/api/kub/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: house_price_api_service
spec:
  selector: 
    app: house_price_api
  ports:
  - protocol: "TCP"
    name: "5443"
    port: 5443
    targetPort: 82
  type: LoadBalancer
