HousePrice/api/kub/web1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: web1
  name: web1
spec:
  ports:
  - name: "5444"
    port: 5444
    targetPort: 81
  selector:
    io.kompose.service: web1
status:
  loadBalancer: {}
